--- a/src/gtk-3.20/scss/widgets/_overshoot.scss
+++ b/src/gtk-3.20/scss/widgets/_overshoot.scss
@@ -92,6 +92,10 @@
 scrolledwindow {
     viewport.frame { // avoid double borders when viewport inside scrolled window
         border-style: none;
+
+        separator {
+            background-image: image(mix($text_color, $base_color, .9));
+        }
     }
 
     // This is used by GtkScrolledWindow, when content is touch-dragged past boundaries.
