--- a/src/gtk-3.20/scss/widgets/_view.scss
+++ b/src/gtk-3.20/scss/widgets/_view.scss
@@ -22,6 +22,10 @@
                 //border-radius: $roundness;
             }
         }
+
+        separator { // vbox and hbox separators
+            background-image: image(mix($text_color, $base_color, .9));
+        }
     }
 
     .view,
@@ -52,7 +56,7 @@
 @include exports("treeview") {
     .rubberband,
     rubberband {
-        border: 1px solid darken($selected_bg_color, .1);
+        border: 1px solid mix($selected_bg_color, $selected_fg_color, .1);
         background-color: transparentize(darken($selected_bg_color, .1), .8);
     }
 
@@ -105,8 +109,8 @@
         -GtkTreeView-tree-line-width: 1;
         -GtkTreeView-tree-line-pattern: "";
 
-        border-left-color: mix($fg_color, $base_color, .5); // this is actually the tree lines color,
-        border-top-color: $bg_color;                        // while this is the grid lines color, better then nothing
+        border-left-color: mix($fg_color, $base_color, .7); // this is actually the tree lines color,
+        border-top-color: mix($fg_color, $base_color, .9);                        // while this is the grid lines color
 
         rubberband { @extend rubberband; } // to avoid borders being overridden by the previously set props
 
@@ -306,7 +310,7 @@
 
 @include exports("separator") {
     separator { // vbox and hbox separators
-        background: transparentize($black, .9);
+        background-image: image(mix($fg_color, $bg_color, .9));
         min-width: 1px;
         min-height: 1px;
     }
